# belt1-and-2-and-3-janet

./: .env  .gitignore  CONTRIBUTING.md  README.md  build.wasm  jest.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
__tests__/components/: Button.test.tsx  Card.test.tsx  Input.test.tsx
app/: globals.css  layout.tsx  page.tsx
components/: BalanceDisplay.tsx  BonusFeatures.tsx  ContractStats.tsx  PaymentForm.tsx  TransactionHistory.tsx  WalletConnection.tsx  example-components.tsx
contracts/: Cargo.toml
contracts/payment/: Cargo.toml
contracts/payment/src/: lib.rs
lib/: contract.ts  stellar-helper.ts
